--- a/css/style.css
+++ b/css/style.css
@@ -524,6 +524,11 @@ input{ display: none ;}
   position: absolute;
   right: 0;
   top: 5px;
+  cursor: pointer;
+}
+
+#second .second-menu .menu1 .menu-top i:hover{
+  opacity: 0.6;
 }
 
 #second .second-menu .menu1 .menu-top .icon-plus{
