--- a/css/myinitial.css
+++ b/css/myinitial.css
@@ -16,6 +16,26 @@ display: -webkit-box;
 display: -ms-flexbox;
 display: flex;
 
+플렉스 컨테이너에 적용. 주축 column 설정.
+-webkit-box-orient: vertical;
+-ms-flex-direction: column;
+flex-direction: column;
+
+플렉스 컨테이너에 적용. 아이템 교차축 center 정렬.
+-webkit-box-align: center;
+-ms-flex-align: center;
+align-items: center;
+
+플렉스 컨테이너에 적용. 아이템 주축 center 정렬.
+-webkit-box-pack: center;
+-ms-flex-pack: center;
+justify-content: center;
+
+플렉스 컨테이너에 적용. 아이템 주축 space-between 정렬.
+-webkit-box-pack: justify;
+-ms-flex-pack: justify;
+justify-content: space-between;
+
 플렉스 아이템에 적용. 확장 지수 설정.
 -webkit-box-flex: 1;
 -ms-flex: 1;
@@ -25,11 +45,6 @@ flex-grow: 1;
 -webkit-box-orient: horizontal;
 -ms-flex-direction: row;
 flex-direction: row;
-
-플렉스 컨테이너에 적용. 주축 column 설정.
--webkit-box-orient: vertical;
--ms-flex-direction: column;
-flex-direction: column;
 
 플렉스 컨테이너에 적용. 주축 row-reverse 설정.
 -webkit-box-orient: horizontal;
@@ -68,16 +83,6 @@ justify-content: flex-start;
 -ms-flex-pack: end;
 justify-content: flex-end;
 
-플렉스 컨테이너에 적용. 아이템 주축 center 정렬.
--webkit-box-pack: center;
--ms-flex-pack: center;
-justify-content: center;
-
-플렉스 컨테이너에 적용. 아이템 주축 space-between 정렬.
--webkit-box-pack: justify;
--ms-flex-pack: justify;
-justify-content: space-between;
-
 플렉스 컨테이너에 적용. 아이템 교차축 start 정렬.
 -webkit-box-align: start;
 -ms-flex-align: start;
@@ -87,11 +92,6 @@ align-items: flex-start;
 -webkit-box-align: end;
 -ms-flex-align: end;
 align-items: flex-end;
-
-플렉스 컨테이너에 적용. 아이템 교차축 center 정렬.
--webkit-box-align: center;
--ms-flex-align: center;
-align-items: center;
 
 플렉스 컨테이너에 적용. 아이템 교차축 stretch 정렬.
 -webkit-box-align: stretch;
@@ -200,12 +200,12 @@ input, textarea, button {-webkit-appearance:none; -moz-appearance:none; appearan
 input, textarea, button, select {-webkit-border-radius:0; -moz-border-radius:0; -o-border-radius:0; border-radius:0;}
 
 /* 폰트 컬러 */
-.ftcolor01{color:#32a2db}
-.ftcolor02{color:#e28223}
-.ftcolor03{color:#6e73dd}
-.ftcolor04{color:#ff194a}
-.ftcolor05{color:#ccc}
-.ftcolor06{color:#666;}
+.c-black{color:#000000;}
+.c-white{color:#ffffff;}
+.c-3{color:#6e73dd;}
+.c-4{color:#ff194a;}
+.c-5{color:#ccc;}
+.c-6{color:#666;}
 
 .text-color-01 { color: #c27a34; }
 
@@ -318,7 +318,8 @@ input, textarea, button, select {-webkit-border-radius:0; -moz-border-radius:0; 
 
 .fs-100 { font-size: 100px; }
 
-@media all and (max-width: 1200px) { .fs-10 { font-size: 8px; }
+@media all and (max-width: 1200px) {
+	.fs-10 { font-size: 8px; }
   .fs-12 { font-size: 9px; }
   .fs-14 { font-size: 11px; }
   .fs-16 { font-size: 12px; }
@@ -364,54 +365,10 @@ input, textarea, button, select {-webkit-border-radius:0; -moz-border-radius:0; 
   .fs-96 { font-size: 72px; }
   .fs-98 { font-size: 74px; }
   .fs-100 { font-size: 75px; }
-  .m-fs-10 { font-size: 8px; }
-  .m-fs-12 { font-size: 9px; }
-  .m-fs-14 { font-size: 11px; }
-  .m-fs-16 { font-size: 12px; }
-  .m-fs-18 { font-size: 14px; }
-  .m-fs-20 { font-size: 15px; }
-  .m-fs-22 { font-size: 17px; }
-  .m-fs-24 { font-size: 18px; }
-  .m-fs-26 { font-size: 20px; }
-  .m-fs-28 { font-size: 21px; }
-  .m-fs-30 { font-size: 23px; }
-  .m-fs-32 { font-size: 24px; }
-  .m-fs-34 { font-size: 26px; }
-  .m-fs-36 { font-size: 27px; }
-  .m-fs-38 { font-size: 29px; }
-  .m-fs-40 { font-size: 30px; }
-  .m-fs-42 { font-size: 32px; }
-  .m-fs-44 { font-size: 33px; }
-  .m-fs-46 { font-size: 35px; }
-  .m-fs-48 { font-size: 36px; }
-  .m-fs-50 { font-size: 38px; }
-  .m-fs-52 { font-size: 39px; }
-  .m-fs-54 { font-size: 41px; }
-  .m-fs-56 { font-size: 42px; }
-  .m-fs-58 { font-size: 44px; }
-  .m-fs-60 { font-size: 45px; }
-  .m-fs-62 { font-size: 47px; }
-  .m-fs-64 { font-size: 48px; }
-  .m-fs-66 { font-size: 50px; }
-  .m-fs-68 { font-size: 51px; }
-  .m-fs-70 { font-size: 53px; }
-  .m-fs-72 { font-size: 54px; }
-  .m-fs-74 { font-size: 56px; }
-  .m-fs-76 { font-size: 57px; }
-  .m-fs-78 { font-size: 59px; }
-  .m-fs-80 { font-size: 60px; }
-  .m-fs-82 { font-size: 62px; }
-  .m-fs-84 { font-size: 63px; }
-  .m-fs-86 { font-size: 65px; }
-  .m-fs-88 { font-size: 66px; }
-  .m-fs-90 { font-size: 68px; }
-  .m-fs-92 { font-size: 69px; }
-  .m-fs-94 { font-size: 71px; }
-  .m-fs-96 { font-size: 72px; }
-  .m-fs-98 { font-size: 74px; }
-  .m-fs-100 { font-size: 75px; } }
+  }
 
-@media all and (max-width: 768px) { .fs-10 { font-size: 7px; }
+@media all and (max-width: 768px) {
+	.fs-10 { font-size: 7px; }
   .fs-12 { font-size: 8px; }
   .fs-14 { font-size: 9px; }
   .fs-16 { font-size: 10px; }
@@ -457,54 +414,10 @@ input, textarea, button, select {-webkit-border-radius:0; -moz-border-radius:0; 
   .fs-96 { font-size: 62px; }
   .fs-98 { font-size: 64px; }
   .fs-100 { font-size: 65px; }
-  .m-fs-10 { font-size: 7px; }
-  .m-fs-12 { font-size: 8px; }
-  .m-fs-14 { font-size: 9px; }
-  .m-fs-16 { font-size: 10px; }
-  .m-fs-18 { font-size: 12px; }
-  .m-fs-20 { font-size: 13px; }
-  .m-fs-22 { font-size: 14px; }
-  .m-fs-24 { font-size: 16px; }
-  .m-fs-26 { font-size: 17px; }
-  .m-fs-28 { font-size: 18px; }
-  .m-fs-30 { font-size: 20px; }
-  .m-fs-32 { font-size: 21px; }
-  .m-fs-34 { font-size: 22px; }
-  .m-fs-36 { font-size: 23px; }
-  .m-fs-38 { font-size: 25px; }
-  .m-fs-40 { font-size: 26px; }
-  .m-fs-42 { font-size: 27px; }
-  .m-fs-44 { font-size: 29px; }
-  .m-fs-46 { font-size: 30px; }
-  .m-fs-48 { font-size: 31px; }
-  .m-fs-50 { font-size: 33px; }
-  .m-fs-52 { font-size: 34px; }
-  .m-fs-54 { font-size: 35px; }
-  .m-fs-56 { font-size: 36px; }
-  .m-fs-58 { font-size: 38px; }
-  .m-fs-60 { font-size: 39px; }
-  .m-fs-62 { font-size: 40px; }
-  .m-fs-64 { font-size: 42px; }
-  .m-fs-66 { font-size: 43px; }
-  .m-fs-68 { font-size: 44px; }
-  .m-fs-70 { font-size: 46px; }
-  .m-fs-72 { font-size: 47px; }
-  .m-fs-74 { font-size: 48px; }
-  .m-fs-76 { font-size: 49px; }
-  .m-fs-78 { font-size: 51px; }
-  .m-fs-80 { font-size: 52px; }
-  .m-fs-82 { font-size: 53px; }
-  .m-fs-84 { font-size: 55px; }
-  .m-fs-86 { font-size: 56px; }
-  .m-fs-88 { font-size: 57px; }
-  .m-fs-90 { font-size: 59px; }
-  .m-fs-92 { font-size: 60px; }
-  .m-fs-94 { font-size: 61px; }
-  .m-fs-96 { font-size: 62px; }
-  .m-fs-98 { font-size: 64px; }
-  .m-fs-100 { font-size: 65px; } }
+   }
 
-@media all and (max-width: 480px) { .fs-10 { font-size: 5px; }
+@media all and (max-width: 480px) {
+	.fs-10 { font-size: 5px; }
   .fs-12 { font-size: 6px; }
   .fs-14 { font-size: 7px; }
   .fs-16 { font-size: 8px; }
@@ -550,52 +463,7 @@ input, textarea, button, select {-webkit-border-radius:0; -moz-border-radius:0; 
   .fs-96 { font-size: 48px; }
   .fs-98 { font-size: 49px; }
   .fs-100 { font-size: 50px; }
-  .m-fs-10 { font-size: 5px; }
-  .m-fs-12 { font-size: 6px; }
-  .m-fs-14 { font-size: 7px; }
-  .m-fs-16 { font-size: 8px; }
-  .m-fs-18 { font-size: 9px; }
-  .m-fs-20 { font-size: 10px; }
-  .m-fs-22 { font-size: 11px; }
-  .m-fs-24 { font-size: 12px; }
-  .m-fs-26 { font-size: 13px; }
-  .m-fs-28 { font-size: 14px; }
-  .m-fs-30 { font-size: 15px; }
-  .m-fs-32 { font-size: 16px; }
-  .m-fs-34 { font-size: 17px; }
-  .m-fs-36 { font-size: 18px; }
-  .m-fs-38 { font-size: 19px; }
-  .m-fs-40 { font-size: 20px; }
-  .m-fs-42 { font-size: 21px; }
-  .m-fs-44 { font-size: 22px; }
-  .m-fs-46 { font-size: 23px; }
-  .m-fs-48 { font-size: 24px; }
-  .m-fs-50 { font-size: 25px; }
-  .m-fs-52 { font-size: 26px; }
-  .m-fs-54 { font-size: 27px; }
-  .m-fs-56 { font-size: 28px; }
-  .m-fs-58 { font-size: 29px; }
-  .m-fs-60 { font-size: 30px; }
-  .m-fs-62 { font-size: 31px; }
-  .m-fs-64 { font-size: 32px; }
-  .m-fs-66 { font-size: 33px; }
-  .m-fs-68 { font-size: 34px; }
-  .m-fs-70 { font-size: 35px; }
-  .m-fs-72 { font-size: 36px; }
-  .m-fs-74 { font-size: 37px; }
-  .m-fs-76 { font-size: 38px; }
-  .m-fs-78 { font-size: 39px; }
-  .m-fs-80 { font-size: 40px; }
-  .m-fs-82 { font-size: 41px; }
-  .m-fs-84 { font-size: 42px; }
-  .m-fs-86 { font-size: 43px; }
-  .m-fs-88 { font-size: 44px; }
-  .m-fs-90 { font-size: 45px; }
-  .m-fs-92 { font-size: 46px; }
-  .m-fs-94 { font-size: 47px; }
-  .m-fs-96 { font-size: 48px; }
-  .m-fs-98 { font-size: 49px; }
-  .m-fs-100 { font-size: 50px; } }
+   }
 
 /*font-Weight*/
 .fw-100 { font-weight: 100; }
