--- a/css/roomstyle.css
+++ b/css/roomstyle.css
@@ -1,18 +1,454 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Montaga&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+body{
+  width: 100%;
+  max-width: 1700px;
+  margin: 0 auto;
+  scroll-behavior: smooth;
+}
+
+#all-wrap{
+  width: 100%;
+  max-width: 1700px;
+  margin: 0 auto;
+}
+
+#go_to_top{
+  position: fixed;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  right: 15px;
+  bottom: 15px;
+  border: 1px solid #f1f1f1;
+  box-sizing: border-box;
+  border-radius: 20px;
+  /* border-radius: 100%; */
+  overflow: hidden;
+  background: #cec0b5;
+}
+
+#go_to_top{
+  position: fixed;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  right: 15px;
+  bottom: 15px;
+  border: 1px solid #f1f1f1;
+  box-sizing: border-box;
+  border-radius: 20px;
+  /* border-radius: 100%; */
+  overflow: hidden;
+  background: #cec0b5;
+  z-index: 200;
+}
+
+#go_to_top a{
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  background: url('../img/arrow_up.png') no-repeat center center;
+  z-index: 200;
+}
+
+#all-wrap{
+  position: relative;
+  width: 100%;
+  margin: 0 auto;
+}
+
+input[type=checked]#gnbcheck{
+  display: none;
+  -webkit-appearance: none;
+ }
+input{ display: none ;}
+#mobile_close_btn{
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  top: 10px;
+  right: 10px;
+  z-index: 8000;
+  display: none;
+}
+
+#mobile_close_btn:before,#mobile_close_btn:after{
+  content: '';
+  position: absolute;
+  width: 40px;
+  height: 2.5px;
+  top: 16px;
+  background: #fff;
+}
+
+#mobile_close_btn:before{
+  transform: rotate(40deg);
+}
+
+#mobile_close_btn:after{
+  transform: rotate(-40deg);
+}
+
+#gnbbtn{
+  position: absolute;
+  top: 45px;
+  right: 10px;
+  width: 32px;
+  height: 32px;
+  z-index: 9001;
+}
+
+#gnbbtn span{
+  position: absolute;
+  width: 40px;
+  height: 2.5px;
+  top: 16px;
+  background: #000;
+  transform: translateY(-50%);
+}
+
+#gnbbtn span:nth-child(1){ top: 5px; }
+#gnbbtn span:nth-child(2){ top: 27px; }
+
+#headerwrap{
+  position: fixed;
+  width: 100%;
+  max-width: 1700px;
+  margin: 0 auto;
+  background: #fff;
+  z-index: 5000;
+}
+
+#headerwrap .header{
+  position: relative;
+  height: 130px;
+  line-height: 100px;
+  background: #fff;
+  width: 100%;
+  border-bottom: 1px solid #ddd;
+}
+
+#headerwrap .header .mainlogo{
+  position: absolute;
+  display: inline-block;
+  top: 30%
+}
+
+#headerwrap .header .gnb{
+  position: absolute;
+  z-index: 7000;
+}
+
+#headerwrap .header .gnb .mainmenu{
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 0 48px;
+  width: 1300px;
+  margin-left: 330px;
+}
+
+#headerwrap .header .gnb .mainmenu > li{
+  position: relative;
+  float: left;
+}
+
+#headerwrap .header .gnb .mainmenu > li > a{
+  position: relative;
+  display: inline-block;
+  font-size: 22px;
+  line-height: 130px;
+  color: black;
+  text-align: center;
+  text-transform: uppercase;
+  transition: background .5s;
+  padding: 0 53px;
+}
+
+#headerwrap .header .gnb .mainmenu > li > a::after{
+  display: inline-block;
+  content: '';
+  opacity: 0;
+  background: #c27a34;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  width: 50px;
+  height: 3px;
+}
+
+#headerwrap .header .gnb .mainmenu > li > a:hover{
+  color: #c27a34;
+}
+
+/* #headerwrap .header .gnb .mainmenu > li > a:hover::after{
+  opacity: 1;
+  left: 0;
+  width: 100%;
+} */
+
+#headerwrap .header .gnb .mainmenu > li.on a{
+  color: #c27a34;
+}
+
+#headerwrap .header .gnb .mainmenu > li.on a::after{
+  opacity: 1;
+  left: 0;
+  width: 100%;
+}
+
+#headerwrap .header .gnb .mainmenu > li:hover > a{
+  background: white;
+}
+
+#headerwrap .header .gnb .mainmenu > li:hover > a::after{
+  opacity: 1;
+  left: 0;
+  width: 100%;
+}
+
+#headerwrap .header .gnb .mainmenu > li:hover > .submenu{
+  display: block;
+}
+
+/* #headerwrap .header .gnb:hover .submenu{
+  display: block;
+} */
+
+/* sub 메뉴 */
+.mainmenu .submenu{
+  position: relative;
+  background: #fff;
+  display: none;
+}
+
+.mainmenu .submenu ul{
+  width: 100%;
+  background: #fff;
+  padding-bottom: 20px;
+}
+
+.mainmenu .submenu li a{
+  display: block;
+  font-size: 18px;
+  line-height: 40px;
+  text-align: center;
+  color: #666666;
+  text-transform: capitalize;
+  transition: background .5s;
+}
+
+.mainmenu .submenu li:last-child a{
+  padding-bottom: 30px;
+}
+
+.mainmenu .submenu li:first-child a{
+  padding-top: 30px;
+}
+
+.mainmenu .submenu li:hover a{
+  background: #fff;
+}
+
+.mainmenu .submenu li a:hover{
+  color: #c27a34;
+}
+
+#mainbg{
+  position: relative;
+  width: 100%;
+  height: 700px;
+  background: url("../img/room/room_benner.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  overflow: hidden;
+}
+
+#mainbg .main-bg{
+  width: 100%;
+  display: block;
+  text-align: center;
+}
+#mainbg .main-bg .main-text .fs-16{
+  letter-spacing: 0.3em;
+  color: white;
+}
+#mainbg .main-bg .main-text{
+  width: 100%;
+  min-height: 700px;
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+#content{
+  width: 100%;
+  margin: 0 auto;
+}
+
+#main_aside{
+  width: 100%;
+  margin: 0 auto;
+}
+
+.button-wrap{
+  width: 100%;
+  background-color: white;
+  position: relative;
+  bottom: 60px;
+}
+
+.buttons{
+  margin: 0 auto;
+  height: 70px;
+  line-height: 70px;
+  max-width: 1200px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  justify-content: space-around;
+  color: #000000;
+  font-weight: 500;
+}
+
+.buttons::before{
+  content: '';
+  width: 7px;
+  height: 7px;
+  border-radius: 100%;
+  background: #ccc;
+}
+
+.buttons::after{
+  content: '';
+  width: 7px;
+  height: 7px;
+  border-radius: 100%;
+  background: #ccc;
+}
+/* 탭 */
+
+#content input:nth-of-type(1):checked ~ .button-wrap section.buttons label:nth-of-type(1){
+  color: #c27a34;
+}
+
+#content input:nth-of-type(2):checked ~ .button-wrap section.buttons label:nth-of-type(2){
+  color: #c27a34;
+}
+
+#content input:nth-of-type(3):checked ~ .button-wrap section.buttons label:nth-of-type(3){
+  color: #c27a34;
+}
+
+#content input:nth-of-type(4):checked ~ .button-wrap section.buttons label:nth-of-type(4){
+  color: #c27a34;
+}
+
+#content input{
+  display: none;
+}
+/* 1번버튼 */
+#content input:nth-of-type(1) ~ div:nth-of-type(2) { display: none; }
+#content input:nth-of-type(1):checked ~ div:nth-of-type(2) { display: block; }
+/* 2번버튼 */
+#content input:nth-of-type(2) ~ div:nth-of-type(3) { display: none; }
+#content input:nth-of-type(2):checked ~ div:nth-of-type(3) { display: block; }
+
+#content input:nth-of-type(3) ~ div:nth-of-type(4) { display: none; }
+#content input:nth-of-type(3):checked ~ div:nth-of-type(4) { display: block; }
+
+#content input:nth-of-type(4) ~ div:nth-of-type(5) { display: none; }
+#content input:nth-of-type(4):checked ~ div:nth-of-type(5) { display: block; }
+
+label{
+  cursor: pointer;
+}
+
+/* 컨텐츠 */
+#main-aside{
+  /* background-color: #f8f5f1; */
+  /* background-color: #f0e4d7; */
+  /* background-color: #fff3e2; */
+  background-color: #f4f4f2;
+}
 
 
+.room1{
+  width: 100%;
+  max-width: 1600px;
+  margin: 0 auto;
+}
 
+.f1{
+  width: 100%;
+  text-align: center;
+}
 
+.room-text p{
+  color: #c27a34;
+}
 
+.room-text h2{
+  color: #000;
+  font-weight: 500;
+  margin-bottom: 80px;
+}
 
+.roominfo{
+  width: 100%;
+  max-width: 1600px;
+  margin: 0 auto;
+  text-align: center;
+}
 
+.roominfo .fs-24{
+  color: #000;
+  font-weight: 300;
+  margin-top: 60px;
+  margin-bottom: 30px;
+}
 
+.roominfo .fs-20{
+  padding-bottom: 100px;
+}
 
+/* 슬라이드 변경 */
 
+.room2{
+  width: 100%;
+  max-width: 1600px;
+  margin: 0 auto;
+}
 
+.room3{
+  width: 100%;
+  max-width: 1600px;
+  margin: 0 auto;
+}
 
-
-
+.room4{
+  width: 100%;
+  max-width: 1600px;
+  margin: 0 auto;
+}
 
 
 
