--- a/css/roomstyle2.css
+++ b/css/roomstyle2.css
@@ -6,7 +6,9 @@
 body{
   width: 100%;
   max-width: 1700px;
+  height: 100%;
   margin: 0 auto;
+  position: relative;
   scroll-behavior: smooth;
 }
 
@@ -295,179 +297,46 @@ input{ display: none ;}
   justify-content: center;
 }
 
-#content{
-  width: 100%;
-  margin: 0 auto;
-}
 
-#main_aside{
-  width: 100%;
-  margin: 0 auto;
-}
-
-.button-wrap{
-  width: 100%;
-  background-color: white;
-  position: relative;
-  bottom: 60px;
-}
-
-.buttons{
-  margin: 0 auto;
-  height: 70px;
-  line-height: 70px;
-  max-width: 1200px;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  justify-content: space-around;
-  color: #000000;
-  font-weight: 500;
-}
-
-.buttons::before{
-  content: '';
-  width: 7px;
-  height: 7px;
-  border-radius: 100%;
-  background: #ccc;
-}
-
-.buttons::after{
-  content: '';
-  width: 7px;
-  height: 7px;
-  border-radius: 100%;
-  background: #ccc;
-}
 /* 탭 */
+.section input[id*="slide"] {display:none;}
 
-#content input:nth-of-type(1):checked ~ .button-wrap section.buttons label:nth-of-type(1){
-  color: #c27a34;
-}
+.section .slidewrap {max-width:1200px;margin:0 auto;overflow:hidden;}
+.section .slidelist {white-space:nowrap;font-size:0;}
+.section .slidelist > li {display:inline-block;vertical-align:middle;width:100%;transition:all .5s;}
+.section .slidelist > li > a {display:block;position:relative;overflow:hidden;} /* 화살표 화면 밖으로 나가면 안보이도록 OVERFLOW로 가림처리 */
+.section .slidelist > li > a img {width:100%;}
 
-#content input:nth-of-type(2):checked ~ .button-wrap section.buttons label:nth-of-type(2){
-  color: #c27a34;
-}
-
-#content input:nth-of-type(3):checked ~ .button-wrap section.buttons label:nth-of-type(3){
-  color: #c27a34;
-}
-
-#content input:nth-of-type(4):checked ~ .button-wrap section.buttons label:nth-of-type(4){
-  color: #c27a34;
-}
-
-#content input{
-  display: none;
-}
-/* 1번버튼 */
-#content input:nth-of-type(1) ~ div:nth-of-type(2) { display: none; }
-#content input:nth-of-type(1):checked ~ div:nth-of-type(2) { display: block; }
-/* 2번버튼 */
-#content input:nth-of-type(2) ~ div:nth-of-type(3) { display: none; }
-#content input:nth-of-type(2):checked ~ div:nth-of-type(3) { display: block; }
-
-#content input:nth-of-type(3) ~ div:nth-of-type(4) { display: none; }
-#content input:nth-of-type(3):checked ~ div:nth-of-type(4) { display: block; }
-
-#content input:nth-of-type(4) ~ div:nth-of-type(5) { display: none; }
-#content input:nth-of-type(4):checked ~ div:nth-of-type(5) { display: block; }
+.section .slidelist label {position:absolute;z-index:1;top:50%;transform:translateY(-50%);padding:50px;cursor:pointer;}
+.section .slidelist .left {left:-300px;background:url('../img/mv_prev.png') center center / 100% no-repeat;} /* LEFT -300px로 화살표가 안보이게 되어있도록 준 스타일 */
+.section .slidelist .right {right:-300px;background:url('../img/mv_next.png') center center / 100% no-repeat;}
 
 
-label{
-  cursor: pointer;
-}
+.section input[id="slide01"]:checked ~ .slidewrap .slidelist > li {transform:translateX(0%);}
+.section input[id="slide02"]:checked ~ .slidewrap .slidelist > li {transform:translateX(-100%);}
+.section input[id="slide03"]:checked ~ .slidewrap .slidelist > li {transform:translateX(-200%);}
+
+.section input[id="slide01"]:checked ~ .slidewrap li:nth-child(1) .left {left:30px;transition:all .35s ease .5s;} /* 1번 INPUT이 체크되면 1번 슬라이드의 왼쪽 화살표의 LEFT값이 변하면서 나타나도록 준 스타일 */
+.section input[id="slide01"]:checked ~ .slidewrap li:nth-child(1) .right {right:30px;transition:all .35s ease .5s;} /* 1번 INPUT이 체크되면 1번 슬라이드의 오른쪽 화살표의 LEFT값이 변하면서 나타나도록 준 스타일 */
+.section input[id="slide02"]:checked ~ .slidewrap li:nth-child(2) .left {left:30px;transition:all .35s ease .5s;} /* 2번 INPUT이 체크되면 1번 슬라이드의 왼쪽 화살표의 LEFT값이 변하면서 나타나도록 준 스타일 */
+.section input[id="slide02"]:checked ~ .slidewrap li:nth-child(2) .right {right:30px;transition:all .35s ease .5s;} /* 2번 INPUT이 체크되면 1번 슬라이드의 오른쪽 화살표의 LEFT값이 변하면서 나타나도록 준 스타일 */
+.section input[id="slide03"]:checked ~ .slidewrap li:nth-child(3) .left {left:30px;transition:all .35s ease .5s;} /* 3번 INPUT이 체크되면 1번 슬라이드의 왼쪽 화살표의 LEFT값이 변하면서 나타나도록 준 스타일 */
+.section input[id="slide03"]:checked ~ .slidewrap li:nth-child(3) .right {right:30px;transition:all .35s ease .5s;} /* 3번 INPUT이 체크되면 1번 슬라이드의 오른쪽 화살표의 LEFT값이 변하면서 나타나도록 준 스타일 */
+.section input[id="slide03"]:checked ~ .slidewrap li:nth-child(4) .left {right:30px;transition:all .35s ease .5s;} /* 3번 INPUT이 체크되면 1번 슬라이드의 오른쪽 화살표의 LEFT값이 변하면서 나타나도록 준 스타일 */
+.section input[id="slide03"]:checked ~ .slidewrap li:nth-child(4) .right {right:30px;transition:all .35s ease .5s;} /* 3번 INPUT이 체크되면 1번 슬라이드의 오른쪽 화살표의 LEFT값이 변하면서 나타나도록 준 스타일 */
+.section input[id="slide03"]:checked ~ .slidewrap li:nth-child(5) .left {right:30px;transition:all .35s ease .5s;} /* 3번 INPUT이 체크되면 1번 슬라이드의 오른쪽 화살표의 LEFT값이 변하면서 나타나도록 준 스타일 */
+.section input[id="slide03"]:checked ~ .slidewrap li:nth-child(5) .right{right:30px;transition:all .35s ease .5s;} /* 3번 INPUT이 체크되면 1번 슬라이드의 오른쪽 화살표의 LEFT값이 변하면서 나타나도록 준 스타일 */
+
 
 /* 컨텐츠 */
-#main-aside{
-  /* background-color: #f8f5f1; */
-  /* background-color: #f0e4d7; */
-  /* background-color: #fff3e2; */
-  background-color: #f4f4f2;
-}
 
 
-.room1{
-  width: 100%;
-  max-width: 1600px;
-  margin: 0 auto;
-}
+/* 슬라이드 변경 */
 
-.f1{
-  width: 100%;
-  text-align: center;
-}
 
-.room-text p{
-  color: #c27a34;
-}
 
-.room-text h2{
-  color: #000;
-  font-weight: 500;
-  margin-bottom: 80px;
-}
 
-.roominfo{
-  width: 100%;
-  max-width: 1600px;
-  margin: 0 auto;
-  text-align: center;
-}
 
-.roominfo .fs-24{
-  color: #000;
-  font-weight: 300;
-  margin-top: 60px;
-  margin-bottom: 30px;
-}
-
-.roominfo .fs-20{
-  padding-bottom: 100px;
-}
-
-.room2{
-  width: 100%;
-  max-width: 1600px;
-  margin: 0 auto;
-}
-
-.room3{
-  width: 100%;
-  max-width: 1600px;
-  margin: 0 auto;
-}
-
-.room4{
-  width: 100%;
-  max-width: 1600px;
-  margin: 0 auto;
-  max-height: 1800px;
-}
-
-.roominfo2{
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  justify-content: space-around;
-  background: white;
-  padding: 80px 0;
-  bottom: 50px;
-}
-
-.roominfo2 .info-box{
-  text-align: center;
-  color: #000;
-}
 
 
 
