--- a/css/roomstyle3.css
+++ b/css/roomstyle3.css
@@ -378,10 +378,90 @@ input{ display: none ;}
 #content input:nth-of-type(4) ~ div:nth-of-type(5) { display: none; }
 #content input:nth-of-type(4):checked ~ div:nth-of-type(5) { display: block; }
 
-
 label{
   cursor: pointer;
 }
+
+/* css슬라이드 */
+.section input[id*="slide"] {
+  display:none;
+}
+
+.section .slidewrap {
+  max-width: 1600px;
+  margin: 0 auto;
+  overflow: hidden;
+}
+
+.section .slidelist {
+  white-space: nowrap;
+  font-size: 0;
+}
+
+.section .slidelist > li {
+  display: inline-block;
+  vertical-align: middle;
+  width: 100%;
+  transition: all .5s;
+}
+
+.section .slidelist > li > a {
+  display: block;
+  position: relative;
+  overflow: hidden;
+  }
+
+.section .slidelist > li > a img {
+  width: 100%;
+}
+
+.section .slidelist label {
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 50px;
+  cursor: pointer;
+}
+
+.section .slidelist .left {
+  left: -300px;
+  background: url('../img/room/left-arrow.png') center center / 100% no-repeat;
+}
+
+.section .slidelist .right {
+  right:-300px;
+  background:url('../img/room/right-arrow.png') center center / 100% no-repeat;
+}
+
+.section input[id="slide01"]:checked ~ .slidewrap .slidelist > li {transform:translateX(0%);}
+.section input[id="slide02"]:checked ~ .slidewrap .slidelist > li {transform:translateX(-100%);}
+.section input[id="slide03"]:checked ~ .slidewrap .slidelist > li {transform:translateX(-200%);}
+.section input[id="slide04"]:checked ~ .slidewrap .slidelist > li {transform:translateX(-200%);}
+.section input[id="slide05"]:checked ~ .slidewrap .slidelist > li {transform:translateX(-200%);}
+.section input[id="slide06"]:checked ~ .slidewrap .slidelist > li {transform:translateX(-200%);}
+.section input[id="slide07"]:checked ~ .slidewrap .slidelist > li {transform:translateX(-200%);}
+.section input[id="slide08"]:checked ~ .slidewrap .slidelist > li {transform:translateX(-200%);}
+.section input[id="slide09"]:checked ~ .slidewrap .slidelist > li {transform:translateX(-200%);}
+
+.section input[id="slide01"]:checked ~ .slidewrap li:nth-child(1) .left {left:30px;transition:all .35s ease .5s;}
+.section input[id="slide01"]:checked ~ .slidewrap li:nth-child(1) .right {right:30px;transition:all .35s ease .5s;}
+.section input[id="slide02"]:checked ~ .slidewrap li:nth-child(2) .left {left:30px;transition:all .35s ease .5s;}
+.section input[id="slide02"]:checked ~ .slidewrap li:nth-child(2) .right {right:30px;transition:all .35s ease .5s;}
+.section input[id="slide03"]:checked ~ .slidewrap li:nth-child(3) .left {left:30px;transition:all .35s ease .5s;}
+.section input[id="slide03"]:checked ~ .slidewrap li:nth-child(3) .right {right:30px;transition:all .35s ease .5s;}
+.section input[id="slide03"]:checked ~ .slidewrap li:nth-child(4) .left {left:30px;transition:all .35s ease .5s;}
+.section input[id="slide03"]:checked ~ .slidewrap li:nth-child(4) .right {right:30px;transition:all .35s ease .5s;}
+.section input[id="slide03"]:checked ~ .slidewrap li:nth-child(5) .left {left:30px;transition:all .35s ease .5s;}
+.section input[id="slide03"]:checked ~ .slidewrap li:nth-child(5) .right {right:30px;transition:all .35s ease .5s;}
+.section input[id="slide03"]:checked ~ .slidewrap li:nth-child(6) .left {left:30px;transition:all .35s ease .5s;}
+.section input[id="slide03"]:checked ~ .slidewrap li:nth-child(6) .right {right:30px;transition:all .35s ease .5s;}
+.section input[id="slide03"]:checked ~ .slidewrap li:nth-child(7) .left {left:30px;transition:all .35s ease .5s;}
+.section input[id="slide03"]:checked ~ .slidewrap li:nth-child(7) .right {right:30px;transition:all .35s ease .5s;}
+.section input[id="slide03"]:checked ~ .slidewrap li:nth-child(8) .left {left:30px;transition:all .35s ease .5s;}
+.section input[id="slide03"]:checked ~ .slidewrap li:nth-child(8) .right {right:30px;transition:all .35s ease .5s;}
+.section input[id="slide03"]:checked ~ .slidewrap li:nth-child(9) .left {left:30px;transition:all .35s ease .5s;}
+.section input[id="slide03"]:checked ~ .slidewrap li:nth-child(9) .right {right:30px;transition:all .35s ease .5s;}
 
 /* 컨텐츠 */
 #main-aside{
@@ -431,6 +511,8 @@ label{
   padding-bottom: 100px;
 }
 
+/* 슬라이드 변경 */
+
 .room2{
   width: 100%;
   max-width: 1600px;
@@ -447,27 +529,10 @@ label{
   width: 100%;
   max-width: 1600px;
   margin: 0 auto;
-  max-height: 1800px;
 }
 
-.roominfo2{
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  justify-content: space-around;
-  background: white;
-  padding: 80px 0;
-  bottom: 50px;
-}
 
-.roominfo2 .info-box{
-  text-align: center;
-  color: #000;
-}
+
 
 
 
