--- a/css/roommedia.css
+++ b/css/roommedia.css
@@ -1,1 +1,21 @@
 @charset "UTF-8";
+
+@media screen and ( max-width: 1400px ) {
+
+}
+
+@media screen and ( max-width: 1200px ) {
+
+}
+
+@media screen and ( max-width: 960px ) {
+
+}
+
+@media screen and ( max-width: 770px ) {
+
+}
+
+@media screen and ( max-width: 480px ) {
+
+}
