--- a/css/roommedia.css
+++ b/css/roommedia.css
@@ -1,21 +1,100 @@
 @charset "UTF-8";
+@import "menumedia.css";
 
 @media screen and ( max-width: 1400px ) {
-
+  .tab_item{
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  .swiper-container{
+    width: 100%;
+    height: 700px;
+  }
+  .swiper-slide img{
+    height: 700px;
+    width: 100%;
+  }
 }
 
 @media screen and ( max-width: 1200px ) {
-
+  .tab_item{
+    max-width: 1000px;
+  }
+  .swiper-container{
+    width: 100%;
+    height: 600px;
+  }
+  .swiper-slide img{
+    height: 600px;
+    width: 100%;
+  }
 }
 
 @media screen and ( max-width: 960px ) {
-
+  .tab_item{
+    max-width: 860px;
+  }
+  .swiper-container{
+    width: 100%;
+    height: 550px;
+  }
+  .swiper-slide img{
+    height: 550px;
+    width: 100%;
+  }
+  .roominfo .fs-20{
+    width: 700px;
+    margin: 0 auto;
+  }
 }
 
 @media screen and ( max-width: 770px ) {
-
+  .tab_item{
+    max-width: 670px;
+  }
+  .swiper-container{
+    width: 100%;
+    height: 450px;
+  }
+  .swiper-slide img{
+    height: 450px;
+    width: 100%;
+  }
+  .roominfo .fs-20{
+    width: 550px;
+  }
 }
 
-@media screen and ( max-width: 480px ) {
-
+@media screen and ( max-width: 500px ) {
+  .tab_item{
+    max-width: 330px;
+  }
+  .swiper-container{
+    width: 100%;
+    height: 270px;
+  }
+  .swiper-slide img{
+    height: 270px;
+    width: 100%;
+  }
+  .roominfo .fs-20{
+    width: 300px;
+  }
+  .roominfo2{
+    -webkit-box-orient: vertical;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+  }
+  .roominfo2 .info-box:nth-child(1){
+    margin-bottom: 50px;
+  }
+  .roominfo2 .info-box:nth-child(2){
+    margin-bottom: 50px;
+  }
 }
