--- a/css/roomstyle.css
+++ b/css/roomstyle.css
@@ -223,6 +223,8 @@ input{ display: none ;}
 .mainmenu .submenu{
   position: relative;
   background: #fff;
+  background: whitesmoke;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
   display: none;
 }
 
@@ -242,13 +244,11 @@ input{ display: none ;}
   transition: background .5s;
 }
 
-.mainmenu .submenu li:last-child a{
-  padding-bottom: 30px;
+.mainmenu .submenu li a{
+  padding: 10px 10px;
 }
 
-.mainmenu .submenu li:first-child a{
-  padding-top: 30px;
-}
+
 
 .mainmenu .submenu li:hover a{
   background: #fff;
