--- a/css/reser.css
+++ b/css/reser.css
@@ -84,8 +84,9 @@ body{
   cursor: pointer;
 }
 
-.reservation .submit{
+.reservation button{
   text-align: center;
+  border: none;
   padding: 10px 20px;
   color: #fff;
   font-weight: bold;
@@ -94,11 +95,26 @@ body{
   z-index: 10;
 }
 
+.btn{
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+  margin-top: 50px;
+}
+
+.reservation button a{
+  color: #fff
+}
+
 .reser-text{
   z-index: 100;
 }
 
-.reservation .submit:hover{
-  background-color: #666;
+.reservation button:hover{
+  background-color: gold;
   transition: 1s;
+}
+
+.reservation .cancel{
+  background-color: #ccc;
 }
